<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NatSa</string>
    <string name="real_app_name">NatSa</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmark</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="contact">Contact</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="mic">Mic</string>
    <string name="hello_world">Hello World</string>
    <string name="email">Email</string>
    <string name="our_email">natsa@email.com</string>
    <string name="phone">Phone</string>
    <string name="phone_number">+0 123 456 789</string>
    <string name="working_hours">WORKING HOURS</string>
    <string name="follow_us">FOLLOW US</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="contact_us_message">Any questions? Contact us through Whatsapp or on our contact from below.</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="pertanyaan_1">Pertanyaan 1</string>
    <string name="plus_symbol">+</string>
    <string name="jawaban_pertanyaan_1">Jawaban pertanyaan 1</string>
    <string name="pertanyaan_2">Pertanyaan 2</string>
    <string name="jawaban_pertanyaan_2">Jawaban pertanyaan 2</string>
    <string name="natsa_definition" tools:ignore="TypographyEllipsis">Nature Sawah Aja ... Transaksi Akan Mudah Nature Sawah merupakan sebuah website e-commerce untuk mempermudah dalam penjualan sawah dengan memasang iklan secara gratis maupun perbayar Transaksi anda akan menjadi lebih mudah dan cepat .</string>
    <string name="sawah">Sawah</string>
    <string name="categories">Categories</string>
    <string name="pesan_sawah">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</string>
    <string name="lihat_sekarang"><![CDATA[LIHAT SEKARANG ->]]></string>
    <string name="productsimage">productsImage</string>
    <string name="judul">Judul</string>
    <string name="harga">Harga</string>
    <string name="alamat">Alamat</string>
    <string name="daerah">Daerah</string>
    <string name="sertifikasi">Sertifikasi</string>
    <string name="tipe">Tipe</string>
    <string name="kategori">Kategori</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="dont_have_account_sign_up">Dont have account? Sign Up</string>
    <string name="lewati">Lewati</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="sawah_dijual">Sawah Dijual</string>
    <string name="sawah_disewakan">Sawah Disewakan</string>
    <string name="username">Username</string>
    <string name="ktp">KTP</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="kembali">kembali</string>
    <string name="lanjut">Lanjut</string>
    <string name="dashboard">Dashboard</string>
    <string name="jual_sewakan">Jual/Sewakan</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="role">Role</string>
    <string name="profile_information">Profile Information</string>
    <string name="update_password">Update Password</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="once_your_account_is_deleted_all_of_its_resources_and_data_will_be_permanently_deleted_before_deleting_your_account_please_download_any_data_or_information_that_you_wish_to_retain">Jika melakukan ini semua data akan dihapus tanpa tersisa dari sistem, harap simpan semua data yang ingin anda tetap simpan di tempat penyimpanan lainnya</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="simpan_sawah">Simpan Sawah</string>
    <string name="makelar">Makelar</string>
    <string name="hapus">Hapus</string>
    <string name="rp">Rp</string>
    <string name="luas">Luas</string>
    <string name="m">m</string>
    <string name="_2">2</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="maps">Maps</string>
    <string name="bekas_sawah">Bekas Sawah</string>
    <string name="irigasi_sawah">Irigasi Sawah</string>
    <string name="gambar">Gambar</string>
    <string name="tambah">Tambah</string>
    <string name="lihat">Lihat</string>
    <string name="history">History</string>
    <string name="tersedia">Tersedia</string>
    <string name="no_hp">No HP</string>
    <string name="clear">Clear</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="jenis_sawah">Jenis Sawah</string>
    <string name="min_harga">Min Harga</string>
    <string name="max_harga">Max Harga</string>
    <string name="min_luas">Min Luas</string>
    <string name="max_luas">Max Luas</string>
    <string name="jenis_irigasi">Jenis Irigasi</string>
    <string name="terapkan">Terapkan</string>
    <string name="bergabung_sejak">Bergabung sejak</string>
    <string name="sosmed">Sosmed</string>
    <string name="lihat_makelar">Lihat Makelar</string>
    <string name="sawah_yang_dijual">Sawah yang dijual</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="ubah_gambar"><u>Ubah gambar</u></string>
    <string name="sosial_media">Sosial Media</string>
    <string name="natsa">NatSa</string>
    <string name="sawah_lainnya">Sawah Lainnya</string>
</resources>